# sql-query-parser

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  queries.db  sample-data.json  svelte.config.js  tsconfig.json
.github/workflows/: ci.yml
.history/: README_20250510114339.md  package_20250510114229.json  package_20250510114347.json  package_20250510114353.json  package_20250510114454.json  package_20250510114634.json  package_20250510121954.json  package_20250510122421.json  package_20250510122522.json  package_20250510122523.json  sample-data_20250510114358.json  sample-data_20250510114400.json  svelte.config_20250510121730.js  tsconfig.server_20250510114624.json  tsconfig.server_20250510114627.json  tsconfig_20250510114444.json  tsconfig_20250510114619.json
.history/src/: server_20250510114311.ts  server_20250510121652.ts  server_20250510122047.ts
.history/src/lib/: sqlParser_20250510114259.ts  sqlParser_20250510121715.ts  sqlParser_20250510122036.ts  sqlParser_20250510122750.ts  sqlParser_20250510122915.ts  sqlParser_20250510123016.ts  sqlParser_20250510123019.ts  sqlParser_20250510123828.ts  types_20250510114236.ts  types_20250510121721.ts
go/: Makefile  README.md  TESTING.md  go.mod  test-api.sh
haskell/: Makefile  sql-query-parser.cabal
haskell/src/: Main.hs
haskell/src/Parser/: Core.hs  Types.hs
haskell/test/: Test.hs
rust/: Cargo.toml  Makefile
rust/src/: main.rs
src/: app.css  app.css.save  app.html  server.ts
src/__tests__/: server.test.ts
src/lib/: sqlParser.test.ts  sqlParser.ts
src/routes/: +page.svelte
(+22 files in other folders)
