cabal-version: 2.4
name:          sql-query-parser
version:       0.1.0.0
synopsis:      A minimal SQL query parser in Haskell
license:       MIT
build-type:    Simple

executable sql-query-parser-server
  main-is:          Main.hs
  other-modules:    Parser.Types
                  , Parser.Core
  build-depends:    base >= 4.14 && < 5
                  , aeson >= 2.0
                  , text >= 1.2
                  , containers >= 0.6
                  , scotty >= 0.21
                  , wai-extra >= 3.1
                  , http-types >= 0.12
                  , bytestring >= 0.10
                  , scientific >= 0.3
                  , unordered-containers >= 0.2
                  , vector >= 0.12
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite sql-query-parser-tests
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  other-modules:    Parser.Types
                  , Parser.Core
  build-depends:    base >= 4.14 && < 5
                  , aeson >= 2.0
                  , text >= 1.2
                  , containers >= 0.6
                  , scientific >= 0.3
                  , unordered-containers >= 0.2
                  , vector >= 0.12
                  , HUnit >= 1.6
                  , test-framework >= 0.8
                  , test-framework-hunit >= 0.3
  hs-source-dirs:   src, test
  default-language: Haskell2010
  ghc-options:      -Wall
